# preparse

./: MANIFEST.in  Makefile  README.rst  o.toml  pyproject.toml
docs/: CNAME  _index.html  features.html  impressum.html  index.html  install.html  intro.html  license.html  testing.html  v1.0.rst  v1.1.rst  v2.0.dev.rst
src/preparse/: __init__.py  warnings.py
src/preparse/_items/: Bundle.py  Item.py  Long.py  Option.py  Positional.py  Special.py  __init__.py
src/preparse/_parsing/: Item.py  Parsing.py  __init__.py  deparse.py  digest.py  items.py  parse.py  preparse.py  process.py  utils.py
src/preparse/_processing/: __init__.py  deparsing.py  digesting.py  items.py  parsing.py  pulling.py  utils.py
src/preparse/_processing/items/: Bundle.py  Item.py  Long.py  Option.py  Positional.py  Special.py  __init__.py
src/preparse/_tests/: expit.py  secondary.py
src/preparse/_utils/: __init__.py  dataprop.py
src/preparse/core/: Click.py  OptNaming.py  Optdict.py  PreParser.py  PreparseWarning.py  __init__.py  enums.py  warnings.py
src/preparse/enums/: BaseEnum.py  Nargs.py  Tuning.py  __init__.py
src/preparse/tests/: __init__.py  expit.toml  secondary.toml  test_all.py  test_data_toml.py  test_enums.py  test_expit.py  test_expit_toml.py  test_extra.py  test_extra_no_permutation.py  test_extra_posix.py  test_features.py  test_long_only.py  test_long_only_no_permutation.py  test_long_only_posix.py  test_max.py  test_optNaming.py  test_optdict.py  test_parse.py  test_parse_no_permutation.py  test_parse_posix.py  test_preparser.py  test_warn.py  test_warn_9001.py  test_warn_9002.py  test_warn_9003.py  test_warn_9004.py  test_warn_9005.py  test_warn_9006.py  test_warn_9007.py  test_warn_even_more.py  test_warn_more.py
src/preparse/typing/: Parser.py  SupportsKeysAndGetitem.py
src/preparse/warners/: AmbiguousOptionWarner.py  DualWarner.py  InvalidOptionWarner.py  LongonlyWarner.py  RequiredArgumentWarner.py  UnallowedArgumentWarner.py  Warner.py  WarnerABC.py
src/preparse/warnings/: PreparseAmbiguousOptionWarning.py  PreparseDualWarning.py  PreparseInvalidOptionWarning.py  PreparseLongonlyWarning.py  PreparseRequiredArgumentWarning.py  PreparseUnallowedArgumentWarning.py  PreparseWarning.py
