[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.2,<9",
    "cmp3>=1.0,<2",
    "copyable>=1.0,<2",
    "datahold>=3.0,<4",
    "datarepr>=1.1,<2",
    "overloadable>=1.1,<2",
    "setdoc>=1.2.8,<2",
    "tofunc>=1.0,<2",
]
description = "This project preparses args for further parsing later on."
keywords = []
name = "preparse"
readme = "README.rst"
requires-python = ">=3.11"
version = "1.0.5"

[project.license]
file = "LICENSE.txt"

[project.urls]
Download = "https://pypi.org/project/preparse/#files"
Index = "https://pypi.org/project/preparse/"
Source = "https://github.com/johannes-programming/preparse/"
Website = "https://preparse.johannes-programming.online/"
