[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "click>=8.2,<9",
    "cmp3>=1.0,<2",
    "copyable>=1.0,<2",
    "datahold>=3.0,<4",
    "datarepr>=1.1,<2",
    "frozendict>=2.4.7,<3",
    "setdoc>=1.2.10,<2",
    "tofunc>=1.0,<2",
]
description = "This project preparses args for further parsing later on."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "preparse"
readme = "README.rst"
requires-python = ">=3.11"
version = "1.0.18+tested.8"

[project.urls]
Download = "https://pypi.org/project/preparse/#files"
Index = "https://pypi.org/project/preparse/"
Source = "https://github.com/johannes-programming/preparse/"
Website = "https://preparse.johannes-programming.online/"
